<resources>
    <string name="app_name">CalculatorRemix</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_bill_amount">Enter Bill Amount</string>
    <string name="enter_number_of_people">Enter Number of People</string>
    <string name="calculate">Calculate</string>
    <string name="enter_tip_percentage">Enter Tip Percentage</string>
    <string name="convert">Convert</string>
    <string name="enter_kilometers">Enter Kilometers</string>
    <string name="enter_celsius">Enter Celsius</string>
    <string name="enter_fahrenheit">Enter Fahrenheit</string>
    <string name="enter_miles">Enter Miles</string>
</resources>